Fixed Hook Overlap Issue on Mobile

--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -500,7 +500,7 @@ path {
 	}
 	.name {
 		font-size: 40px !important;
-		padding-top: 120px !important;
+		padding-top: 0px !important;
 	}
 	.UX {
 		font-size: 40px !important;
